styles.css
@import url('https://fonts.googleapis.com/css2?family=Updock&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Square+Peg&family=Updock&display=swap');

html{
    font-family: "Updock";
}

h1, h2{
    font-family: 'Updock';
    text-align: center;
    font-size: 100px;
    color: rgb(135, 7, 7);
    
}

 img{
    border-radius: 50%;
     width: 400px;
     height: 400px;
    
    }

    .img-recipe{
        border-radius: 50%;
        width: 400px;
        height: 400px;
    }


 .text{
    font-family: 'Updock';
    font-size: 50px;
    margin: 40px;
    margin-top: 10px;
    color: rgb(135, 7, 7);
    
}

.main img:hover{
    transform: scale(1.05);
    transition: all ease ;
    border-radius: 50%;
    box-shadow: 0 0 5px rgb(136, 219, 140);

}

.content{
    display:flex;
    flex-direction: row;
    justify-content: center;
    font-size: 50px;
    gap:20px;
    color: rgb(135, 7, 7);
   }

   .main{
    display: flex;
    flex-direction: column;
    gap:10px;
    align-items:center;
    width:400px;
    text-align: center;
    font-family: "Updock";

   }

   .content{
    gap:40px;
    display: flex;
}

.left{
    
    display: flex;
    flex-direction: column;
    gap:20px;
    padding-left: 30px;
    width:420px;
    height: 1507px;

}

.ingredients-container{
   border: 1px solid;
    border-color: rgb(135, 7, 7);
    border-radius: 10px;
    background-color: rgb(203, 135, 32);
    padding:20px;
    flex-grow: 3;
    font-family: "square+peg";
    font-size: 40px;
    
}

.steps-container{   
    margin-top:20px;
    border-radius: 10px;
    border:1px solid rgb(71, 71, 71);
    height: 987px;
    font-family: "square+peg";
    background-color: rgb(203, 135, 32);
    padding: 20px;
    font-size: 40px;

}

.right-top{
    border-radius: 10px;
    border:1px solid rgb(41, 41, 41);
    height:500px;
    background-color: rgb(203, 135, 32);
    text-size-adjust: auto;
    font-family: "square+peg";
    flex-grow: 3;
    padding: 20px;
    font-size: 40px;
    
}

